# wop

./: .gitignore  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  demo.sh  pyproject.toml  release-v0.1.1.manifest  release-v0.1.1.manifest.wiseproof
.github/workflows/: test.yml
archive/spas/src/: __init__.py  canonical.py  cli.py  digest.py  errors.py  proof.py  verify.py
archive/spas/tests/: test_digest.py  test_proof.py  test_verify.py
demo/: contract_v1.txt  contract_v2.txt
research/: WiseDigest-1.md  WiseDigest-2.md  WiseDigest-3.md  WiseDigest-Lab.md  WiseExpansion.md
scripts/: cryptanalysis-daemon.py  fleet-summary.py  launch-fleet.sh  seal-release.py
spec/: WISEATA-v0.1.0.md  WISEATA-v0.1.1.md  WOP-smallest.md
spec/archive/: SPAS-predecessor-draft.md
src/wise/: __init__.py  cli.py  digest.py  digest_v1.py  digest_v2.py  digest_v3.py  errors.py  expansion.py  format.py  proof.py  seal.py  verify.py
src/wiseata/: __init__.py  cli.py
tests/: test_expansion.py  test_locked_vectors.py  test_wise_demo.py  test_wise_format.py  test_wise_proof.py  test_wise_seal.py  test_wise_verify.py  test_wisedigest_attack_suite.py  test_wisedigest_v1.py  test_wisedigest_v2.py  test_wisedigest_v2_attack_suite.py  test_wisedigest_v3.py  test_wisedigest_v3_attack_suite.py
tests/vectors/: V1_demo_truth.md
